# agent-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_PACK.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  RELEASE_NOTES.md  SKILL.md  package-lock.json  package.json
.agent-context/current/: 00_START_HERE.md  10_SYSTEM_OVERVIEW.md  20_CODE_MAP.md  30_BEHAVIORAL_INVARIANTS.md  40_OPERATIONS_AND_RELEASE.md  manifest.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: agents.rs  context_pack.rs  main.rs  report.rs  utils.rs
cli/src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
docs/: CLI_REFERENCE.md  DEVELOPMENT.md  explainer.md  first-release-checklist.md  release.md  video-demo.md
fixtures/: handoff-report.json  handoff-skill-demo.json
fixtures/demo/: handoff.json  player-context-pack.html  player-handoff.html  player-setup.html  player-skill-setup.html  player-status.html  player-trash-talk.html  player.html
fixtures/golden/: compare.json  list-codex.json  read-claude.json  read-codex.json  read-gemini.json  report.json  search-codex.json  trash-talk-multi.txt  trash-talk-none.txt  trash-talk-single.txt
references/: test-prompts.md  universal-coordinator.md
schemas/: error.schema.json  handoff.schema.json  list-output.schema.json  read-output.schema.json  report.schema.json
scripts/: check_package_contents.sh  check_readme_examples.sh  compare_read_output.cjs  conformance.sh  read_session.cjs  record_demo.js  record_demo.sh  test_edge_cases.sh  test_trash_talk.sh  validate_schemas.sh
(+29 files in other folders)
